--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,73 +1,83 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}    
-        
+
+header, footer {
+  max-width: 840px;
+  margin: 0 auto;
+}
+
 nav {
-    background-color: steelblue;
-    padding: 10px;
-  } 
- 
-  nav a {
-    color: white;
-    display: block;
-    padding: 20px;
-  }
-  
-  h1 {
-    color: steelblue; 
-    padding: 5rem;
-  }
-  
-  main img {
-    width: 150px;
-    height: auto;
-    border: 1px solid steelblue;
-    padding: 2px;
-    box-shadow: 0 0 30px gray; 
-    float:right;  
-  }
-  
-  p {
-    padding: 10px;
-  }
-   
-  main {
-    max-width: 840px;
-  }
-   
-  aside {
-    width: 20em;
-    text-align: center; 
-    position: relative;
-  }
-  
-  aside img {
-    width: 200px;
-    height: auto;
-  }
-   
-  aside h2 {
-    position: absolute;
-    top: 47px; 
-    left: 150px;
-  }  
-  
-  
-  p { padding: 0;}
-  
-  footer {
-    margin-top: 1em;
-    border-top: 1px solid #000;
-    text-align: center;
-  } 
-   
-/* Class Selectors */  
+  background-color: steelblue;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+nav a {
+  display: block;
+  padding: 0.5rem;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: #fff;
+}
+
+
+h1 {
+  color: steelblue;
+  padding: 5rem;
+  border-bottom: 1px solid steelblue;
+}
+
+
+main img {
+  width: 150px;
+  height: auto;
+  border: 1px solid steelblue;
+  padding: 2px;
+  box-shadow: 0 0 30px gray;
+  float: right;
+}
+
+
+p {
+  padding: 10px;
+}
+
+
+main {
+  max-width: 840px;
+  margin: 1rem;
+}
+
+
+aside {
+  width: 20rem;
+  position: relative;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  text-align: center;
+}
+
+aside img {
+  width: 200px;
+  height: auto;
+}
+
+aside h2 {
+  position: absolute;
+  top: 47px;
+  left: 150px;
+}
+
+footer {
+  margin-top: 1em;
+  border-top: 1px solid #000;
+  text-align: center;
+}
 
 .box {
   margin: 1rem;
-  border: 1px solid rgba(0,0,0,.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 1rem;
   background-color: #ddd;
   color: #000;
