--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,58 +1,172 @@
-@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
 
+/* Fonts */
 :root {
-  --primary-color: #333333;
-  --secondary-color: #ffffff;
-  --accent-color: #ff0000;
+  --heading-font: "Roboto";
+  --paragraph-font: Roboto, Helvetica, sans-serif;
 }
 
-h1, h2, h3 {
-  color: var(--primary-color);
+/* Colors */
+:root {
+  --primary-color: #343437;
+  --secondary-color: #5c5c5c;
+  --accent1-color: #9ab6bc;
+  --accent2-color: white;
+  --headline-color-on-white: black;
+  --headline-color-on-color: #FFFFFF;
+  --paragraph-color-on-white: #a5b7c3;
+  --paragraph-color-on-color: white;
+  --paragraph-background-color: #6f7377;
+  --nav-link-color: #75797c;
+  --nav-background-color: #797a7e;
+  --nav-hover-link-color: white;
+  --nav-hover-background-color: #404346;
 }
 
-p {
-  color: var(--secondary-color);
+/* General Styles */
+body {
+  margin: 10%;
+  padding: 30;
 }
-
-.social-media a {
-  text-decoration: none;
-}
-
 
 .container {
-  max-width: 1200px;
+  max-width: 600px;
   margin: 0 auto;
 }
 
+/* Header Styles */
+header {
+  background-color: #ffffff9b;
+  padding: 30px; 
+  text-align: center;
+} 
+
+  h2 {
+  text-align: center; 
+  font-size: 24px
+}
+
+/* Navigation Styles */
+nav {
+  background-color: #555557;
+  display: flex;
+  justify-content: space-around; 
+  text-align: right;
+}
+
+nav a {
+  text-align: center;
+  color: #000;
+  text-decoration: none;
+  padding: 20px;
+}
+
+/* Hero Section Styles */
 .hero {
   position: relative;
+  margin-top: 1rem;
 }
 
 .hero img {
-  display: block;
   width: 100%;
   height: auto;
+  display:block;
 }
 
 .hero h1 {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 10px;
+  left: 50px;
+  color: #ffffff;
+  text-align: center;
 }
 
 .hero article {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  bottom: 50px;
+  left: 20px;
+  border: 1px solid #000;
+  padding: 2%;
+  background-color: #242425;
+  color: #ffffff;
+  opacity: .9;
 }
 
 .hero article img {
+  width: 200px;
+  height: auto;
   float: right;
 }
 
-.hero article {
-  background-color: rgba(255, 255, 255, 0.7);
-  opacity: 0.8;
+/* Footer Styles */
+footer {
+  background-color: #555557;
+  color: #000;
+  padding: 25px 50px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
+
+footer a {
+  color: #000;
+  text-decoration: rgb(52, 52, 52);
+}
+
+footer p {
+  font-size: 1.2em;
+}
+
+footer a:hover {
+  color: #040000;
+}
+
+/* History Section Styles */
+.history-section {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 20px;
+  margin-top: 30px;
+}
+
+/* Adventures Section Styles */
+.adventures-section {
+  margin-top: 30px;
+}
+
+.adventures-grid {
+  display: flex;
+  justify-content: space-between;
+}
+
+.adventures-grid figure {
+  flex: 10% 20% 40%;
+  margin: 0;
+  text-align: center;
+}
+
+.adventures-grid img {
+  width: 80%;
+  height: auto;
+  border-radius: 5px;
+  grid-template-columns: auto 1fr;
+  align-items: right;
+}
+
+.adventures-grid figcaption {
+  margin-top: 10px;
+}
+
+/* Social Links Styles */
+.sociallinks {
+  display: flex;
+  justify-content: flex-end; 
+  background-color: transparent;
+}
+
+.sociallinks img {
+  width: 30px;
+ margin-left: 0px;
+} 
+ 
