--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -38,7 +38,7 @@ body {
 header {
   background-color: #ffffff9b;
   padding: 30px; 
-  text-align: center;
+  
 } 
 
   h2 {
@@ -48,9 +48,9 @@ header {
 
 /* Navigation Styles */
 nav {
-  background-color: #555557;
+  background-color: #ffffff;
   display: flex;
-  justify-content: space-around; 
+  justify-content: center; 
   text-align: right;
 }
 
@@ -58,7 +58,8 @@ nav a {
   text-align: center;
   color: #000;
   text-decoration: none;
-  padding: 20px;
+  padding: 20px; 
+  font-size: 30px
 }
 
 /* Hero Section Styles */
@@ -76,14 +77,15 @@ nav a {
 .hero h1 {
   position: absolute;
   top: 10px;
-  left: 50px;
+  left: 350px;
   color: #ffffff;
-  text-align: center;
+  text-align: center; 
+  font-size:100px
 }
 
 .hero article {
   position: absolute;
-  bottom: 50px;
+  bottom: 40px;
   left: 20px;
   border: 1px solid #000;
   padding: 2%;
@@ -102,8 +104,8 @@ nav a {
 footer {
   background-color: #555557;
   color: #000;
-  padding: 25px 50px;
-  margin-top: 200px;
+  padding: 20px 20px;
+  margin-top: 40px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -119,15 +121,40 @@ footer p {
 }
 
 footer a:hover {
-  color: #040000;
+  color: #ffffff;
 }
 
 /* History Section Styles */
 .history-section {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 20px;
-  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center; 
+
+}
+
+.content-container {
+  display: flex;
+  justify-content: center;
+  align-items: left;
+  
+}
+
+.text-left,
+.text-right {
+  flex-basis: 100%;
+  text-align: left; 
+  font-size: 18px
+}
+
+.image-container {
+  flex-basis: 100%;
+  text-align: center;
+  margin: 10px;
+}
+
+.centered-image {
+  max-width: 200%;
 }
 
 /* Adventures Section Styles */
