--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -77,7 +77,7 @@ body {
 /* Header Styles */
 header {
   background-color: #ffffff9b;
-  padding: 30px; 
+  padding: 20px; 
   
 } 
 
@@ -98,54 +98,65 @@ nav a {
   text-align: center;
   color: #000;
   text-decoration: none;
-  padding: 20px; 
-  font-size: 30px
+  padding: 10px; 
+  font-size: 20px
 }
 
 /* Hero Section Styles */
 .hero {
   position: relative;
   margin-top: 1rem;
+  text-align: center;
 }
 
 .hero img {
   width: 100%;
   height: auto;
-  display:block;
+  display: block;
 }
 
 .hero h1 {
   position: absolute;
-  top: 10px;
-  left: 350px;
+  top: 30%;
+  left: 0;
+  right: 0;
+  transform: translateY(-50%);
   color: #ffffff;
-  text-align: center; 
-  font-size:100px
+  text-align: center;
+  font-size: 40px;
+  margin: 0;
 }
 
 .hero article {
   position: absolute;
-  bottom: 40px;
-  left: 20px;
+  top: 55%;
+  left: 10px;
+  right: 10px;
   border: 1px solid #000;
-  padding: 2%;
+  padding: 1%;
   background-color: #242425;
   color: #ffffff;
-  opacity: .9;
+  opacity: 0.9;
 }
 
 .hero article img {
-  width: 200px;
+  width: 20%;
   height: auto;
   float: right;
 }
+
+.hero article p {
+  margin-top: 0; 
+  font-size: 10px;
+}
+ 
 
 /* Footer Styles */
 footer {
   background-color: #555557;
   color: #000;
-  padding: 20px 20px;
-  margin-top: 40px;
+  padding: 10px 10px;
+  margin-top: 50px;
   display: flex;
   justify-content: space-around;
   align-items: center; 
@@ -185,7 +196,7 @@ footer a:hover {
 .text-right {
   flex-basis: 100%;
   text-align: left; 
-  font-size: 18px
+  font-size: 16px
 }
 
 .image-container {
@@ -195,7 +206,7 @@ footer a:hover {
 }
 
 .centered-image {
-  max-width: 200%;
+  max-width: 100%;
 }
 
 /* Adventures Section Styles */
@@ -245,8 +256,12 @@ footer a:hover {
   margin: 20px 0;
 }
 
-.address, .phone, .email {
+.address, .phone, .email  {
   margin-bottom: 10px;
+}
+
+.address p, .phone p, .email p {
+  text-align: left;
 }
 
 /* Styles for employee profiles */
@@ -280,10 +295,11 @@ footer a:hover {
 
 .employee .title {
   font-style: italic; 
-  margin-top: 2px; 
+  margin-top: 5px; 
   
 }
 
+ 
 /* Styles for contact form */
 #contact-form {
   margin: 20px auto;
@@ -338,4 +354,219 @@ button[type="submit"]:hover {
 p {
   color: rgb(62, 62, 63);
 }
+ 
+
+/* Call to action styles */
+#call-to-action {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+#call-to-action h2 {
+  font-size: 24px;
+}
+
+#call-to-action p {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #666;
+}
+
+/* Trip section styles */
+section {
+  margin-bottom: 20px;
+}
+
+section h2 {
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+section img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 3%;  
+}
+
+section p {
+    font-size: 16px;
+    text-align: center;
+  }
+
+
+/* Trip table styles */
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 6px;
+  border: 1px solid #ddd;
+}
+
+th {
+  background-color: #333;
+  color: #fff;
+}
+
+.head-image {
+  width: 100%;
+  height: auto;
+  align-items: center;
+  color: #fff;
+  text-align: center;
+}
+
+.hero-image {
+  position: relative;
+}
+
+.hero-image img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  display: block;
+  margin: 10px;
+  z-index: -1;
+}
+
+.hero-image p {
+  font-size: 16px;
+  margin: 40px;
+  position: absolute;
+  top: 53%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+  border: 1px solid #000;
+  padding: 1%;
+  background-color: #242425;
+  color: #ffffff;
+  opacity: 0.9;
+}
+
+.hero-image h1 {
+  font-size:45px;
+  margin-bottom: 10px;
+  position: absolute;
+  top: 300px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #fff;
+}
+
+@media (max-width: 767px) {
+  .hero-image p {
+    font-size: 12px;
+    margin:25px;
+  }
+  
+  .hero-image h1 {
+    font-size: 24px;
+    margin-bottom: 5px;
+    top: 20px;
+  }
+}
+
+.newsletter {
+  margin-bottom: 20px;
+}
+
+.newsletter h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.newsletter form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.newsletter label {
+  margin-right: 10px;
+}
+
+.newsletter input {
+  margin-bottom: 10px;
+  padding: 5px;
+  width: 200px;
+}
+
+.newsletter button {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.call-to-action {
+  background-color: #f0f0f0;
+  padding: 20px;
+  text-align: center;
+}
+
+.call-to-action h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.call-to-action p {
+  font-size: 18px;
+}
+
+.btn {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.grid-layout {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.grid-item {
+  background-color: #f0f0f0;
+  padding: 20px;
+}
+
+.grid-item img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.grid-item h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.grid-item p {
+  font-size: 16px;
+}
+
 
