--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,9 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
 
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/roboto/v30/KFOkCnqEu92Fr1Mu52xP.ttf) format('truetype');
+}
 /* Fonts */
 :root {
   --heading-font: "Roboto";
-  --paragraph-font: Roboto, Helvetica, sans-serif;
+  --paragraph-font: "Roboto", Helvetica, sans-serif;
 }
 
 /* Colors */
@@ -219,19 +226,15 @@ footer a:hover {
 }
 
 .adventures-grid figure {
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: 40%;
+  flex: 1 2 40%;
   margin: 0;
   text-align: center;
 }
-
 .adventures-grid img {
   width: 80%;
   height: auto;
   border-radius: 5px;
-  grid-template-columns: auto 1fr;
-  justify-content: flex-end;
+  align-self: flex-end;
 }
 
 .adventures-grid figcaption {
@@ -387,28 +390,33 @@ p {
 }
 
 /* Trip section styles */
-section {
+.trip-section {
   margin-bottom: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 
-section h2 {
-  font-size: 30px;
+.trip-section  h2 {
+  font-size: 40px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
-section img {
+.trip-section img {
   display: block;
   margin: 0 auto;
   max-width: 100%;
   height: auto;
-  margin-bottom: 3%;  
+  margin-bottom: 3%;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-section p {
-    font-size: 16px;
-    text-align: center;
-  }
-
+.trip-section p {
+  font-size: 16px;
+  text-align: center;
+}
 
 /* Trip table styles */
 table {
@@ -417,8 +425,9 @@ table {
 }
 
 th, td {
-  padding: 6px;
+  padding: 10px;
   border: 1px solid #ddd;
+  text-align: center;
 }
 
 th {
